# luciano

./: .gitignore  CMakeLists.txt  install_dependencies
Shaders/: model_load.fragshader  model_load.vertshader
glfw-3.2.1/: cmake_uninstall.cmake
glfw-3.2.1/examples/: boing  gears  heightmap  particles  simple  splitview  wave
glfw-3.2.1/tests/: clipboard  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
include/: Renderer.h
lib/: libGLEW.so.2.1.0
resources/luciano_himself/doing_it/: luciano.mtl  luciano_renormal.mtl
resources/luciano_himself/standing/: luciano.mtl
src/: Renderer.cpp  Timer.cpp  Timer.h  main.cpp
src/Graphics/: Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shaders.cpp  Shaders.h  Utils.cpp  Utils.h  Window.cpp  Window.h  loadShaders.cpp  loadShaders.h
src/Input/: Command.cpp  Command.h  InputHandler.cpp  InputHandler.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Level/: Components.h  Level.cpp  Level.h
src/Level/Systems/: InputSystem.cpp  InputSystem.h  MoveActionSystem.cpp  MoveActionSystem.h  MovementSystem.cpp  MovementSystem.h  RenderingSystem.cpp  RenderingSystem.h  TransformSystem.cpp  TransformSystem.h
